--- a/fc-common/Cargo.toml
+++ b/fc-common/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 zerocopy = {version = "0.8.26", features = ["derive"]}
 defmt = "1.0.1"
+embassy-sync = "0.7.2"
+embassy-time = "0.5.0"
+paste = "1.0.15"
