--- a/fc/Cargo.toml
+++ b/fc/Cargo.toml
@@ -4,31 +4,36 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-embassy-stm32 = { version = "0.2.0", features = ["defmt", "rt", "stm32f411ce", "memory-x", "time-driver-any", "exti"] } #"chrono" "unstable-pac"
-embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"]} #"executor-interrupt"
-embassy-time = { version = "0.4.0", features = ["defmt", "tick-hz-32_768"] } #"defmt-timestamp-uptime"
+embassy-stm32 = { version = "0.4.0", features = ["defmt", "rt", "stm32f411ce", "memory-x", "time-driver-any", "exti", "unstable-pac"] } #"chrono" "unstable-pac"
+embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"]} #"executor-interrupt"
+embassy-time = { version = "0.5.0", features = ["defmt", "tick-hz-32_768"] } #"defmt-timestamp-uptime"
+embassy-futures = "0.1.2"
 defmt = "1.0.1"
 defmt-rtt = { version = "1.0.0" }
 cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"]}
 cortex-m-rt = { version = "0.7.5"}
 panic-probe = { version = "1.0.0", features = ["print-defmt"]}
-stm32f4xx-hal = { version = "0.22.1", features = ["stm32f411"]}
-
+paste = "1.0.15"
 # nrf24-rs = "0.2.0"
 nrf24-rs = { path = "../../RF24-rs", features = ["async"] }
 embedded-hal-bus = "0.3.0"
-embassy-embedded-hal = {version = "0.4.0" }
+embassy-embedded-hal = {version = "0.5.0" }
 embassy-sync = { version = "0.7.0" }
 static_cell = "2.1.1"
 fc-common = { path = "../fc-common" }
 zerocopy = "0.8.26"
 bmp390-rs = {version = "0.4.0" }
 libm = "0.2.15"
+embedded-hal-async = "1.0.0"
+num-traits = { version = "0.2.19", default-features = false, features = ["libm"]}
 
-[patch.crates-io]
-embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192" }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192" }
-embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192" }
+# [patch.crates-io]
+# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192" }
+# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192" }
+# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192" }
 
 [profile.release]
 debug = 2
+
+[workspace]
+resolver = "2"
