--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -49,6 +49,9 @@ paste = "1.0.15"
 [dev-dependencies]
 paste = "1.0.15"
 
+[build-dependencies]
+image = "0.25.8"
+
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
