--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -15,7 +15,7 @@ esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }
 bt-hci = { version = "0.3.2", features = [] }
 # critical-section = "1.2.0"
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
-embassy-futures = "0.1.1"
+embassy-futures = "0.1.2"
 embassy-sync = "0.7.0"
 embassy-time = "0.4.0"
 # embedded-io = "0.6.1"
@@ -45,6 +45,8 @@ nrf24-rs = { path = "../../RF24-rs" }
 fc-common = { path = "../fc-common" }
 zerocopy = "0.8.26"
 paste = "1.0.15"
+uom = { version = "0.37.0", default-features = false, features = ["si", "f32"] }
+num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
 
 [dev-dependencies]
 paste = "1.0.15"
