--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -22,7 +22,7 @@ embassy-time = "0.4.0"
 # embedded-io-async = "0.6.1"
 esp-alloc = "0.8.0"
 embedded-hal = "1.0.0"
-embassy-embedded-hal = "0.3.1"
+embassy-embedded-hal = "0.5.0"
 embedded-hal-bus = { version = "0.3.0" }
 esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
 esp-println = { version = "0.15.0", features = ["log-04", "esp32s3"] }
@@ -41,12 +41,13 @@ ssd1351 = "0.5.0"
 embedded-graphics = { version = "0.8.1" }
 tinyui = { git = "https://github.com/EmilNorden/rust-tinyui.git" }
 # nrf24-rs = "0.2.0"
-nrf24-rs = { path = "../../RF24-rs" }
+nrf24-rs = { path = "../../RF24-rs", features = ["async", "defmt"] }
 fc-common = { path = "../fc-common" }
 zerocopy = "0.8.26"
 paste = "1.0.15"
 uom = { version = "0.37.0", default-features = false, features = ["si", "f32"] }
 num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
+static_cell = "2.1.1"
 
 [dev-dependencies]
 paste = "1.0.15"
